Webtoon reader will now use fit to width instead of original to prevent overflow for high res images

--- a/UI/Web/src/app/manga-reader/manga-reader.component.scss
+++ b/UI/Web/src/app/manga-reader/manga-reader.component.scss
@@ -223,6 +223,7 @@ canvas {
 
   .webtoon-images {
       text-align: center;
+      width: 100%;
   }
 
   .highlight {
